// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-output > should allow to custom server directory with distPath.server 1`] = `
{
  "output": {
    "chunkFilename": "[name].js",
    "filename": "[name].js",
    "hashFunction": "xxhash64",
    "library": {
      "type": "commonjs2",
    },
    "path": "<ROOT>/packages/core/tests/dist/server",
    "pathinfo": false,
    "publicPath": "/",
  },
}
`;

exports[`plugin-output > should allow to set distPath.js and distPath.css to empty string 1`] = `
{
  "output": {
    "chunkFilename": "async/[name].js",
    "filename": "[name].js",
    "hashFunction": "xxhash64",
    "path": "<ROOT>/packages/core/tests/dist",
    "pathinfo": false,
    "publicPath": "/",
  },
  "plugins": [
    CssExtractRspackPlugin {
      "options": {
        "chunkFilename": "async/[name].css",
        "filename": "[name].css",
        "ignoreOrder": true,
      },
    },
  ],
}
`;

exports[`plugin-output > should allow to use copy plugin 1`] = `
{
  "output": {
    "chunkFilename": "static/js/async/[name].js",
    "filename": "static/js/[name].js",
    "hashFunction": "xxhash64",
    "path": "<ROOT>/packages/core/tests/dist",
    "pathinfo": false,
    "publicPath": "/",
  },
  "plugins": [
    CopyRspackPlugin {
      "_options": {
        "patterns": [
          {
            "force": false,
            "from": "test",
            "globOptions": {},
            "noErrorOnMissing": false,
            "priority": 0,
          },
        ],
      },
      "affectedHooks": undefined,
      "name": "CopyRspackPlugin",
    },
    CssExtractRspackPlugin {
      "options": {
        "chunkFilename": "static/css/async/[name].css",
        "filename": "static/css/[name].css",
        "ignoreOrder": true,
      },
    },
  ],
}
`;

exports[`plugin-output > should allow to use copy plugin with multiply config 1`] = `
{
  "output": {
    "chunkFilename": "static/js/async/[name].js",
    "filename": "static/js/[name].js",
    "hashFunction": "xxhash64",
    "path": "<ROOT>/packages/core/tests/dist",
    "pathinfo": false,
    "publicPath": "/",
  },
  "plugins": [
    CopyRspackPlugin {
      "_options": {
        "patterns": [
          {
            "force": false,
            "from": "test",
            "globOptions": {},
            "noErrorOnMissing": false,
            "priority": 0,
          },
          {
            "force": false,
            "from": "src/assets/",
            "globOptions": {},
            "noErrorOnMissing": false,
            "priority": 0,
          },
          {
            "force": false,
            "from": "tests/",
            "globOptions": {},
            "noErrorOnMissing": false,
            "priority": 0,
          },
        ],
      },
      "affectedHooks": undefined,
      "name": "CopyRspackPlugin",
    },
    CssExtractRspackPlugin {
      "options": {
        "chunkFilename": "static/css/async/[name].css",
        "filename": "static/css/[name].css",
        "ignoreOrder": true,
      },
    },
  ],
}
`;

exports[`plugin-output > should allow to use filename.js to modify filename 1`] = `
{
  "output": {
    "chunkFilename": "static/js/async/foo.js",
    "filename": "static/js/foo.js",
    "hashFunction": "xxhash64",
    "path": "<ROOT>/packages/core/tests/dist",
    "pathinfo": false,
    "publicPath": "/",
  },
  "plugins": [
    CssExtractRspackPlugin {
      "options": {
        "chunkFilename": "static/css/async/[name].css",
        "filename": "static/css/[name].css",
        "ignoreOrder": true,
      },
    },
  ],
}
`;

exports[`plugin-output > should set output correctly 1`] = `
{
  "output": {
    "chunkFilename": "static/js/async/[name].js",
    "filename": "static/js/[name].js",
    "hashFunction": "xxhash64",
    "path": "<ROOT>/packages/core/tests/dist",
    "pathinfo": false,
    "publicPath": "/",
  },
  "plugins": [
    CssExtractRspackPlugin {
      "options": {
        "chunkFilename": "static/css/async/[name].css",
        "filename": "static/css/[name].css",
        "ignoreOrder": true,
      },
    },
  ],
}
`;
